--- a/Lab6_2/Lab6_2.vcxproj
+++ b/Lab6_2/Lab6_2.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{1D58A14A-45FA-4AC4-B6BE-F2167795A736}</ProjectGuid>
+    <ProjectGuid>{5402420C-5A27-4CE9-A10C-5B934578A7C8}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>WindowsProject10</RootNamespace>
+    <RootNamespace>Lab62</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -148,19 +148,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Lab6_2.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="WindowsProject10.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WindowsProject10.cpp" />
+    <ClCompile Include="Lab6_2.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="WindowsProject10.rc" />
+    <ResourceCompile Include="Lab6_2.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Lab6_2.ico" />
     <Image Include="small.ico" />
-    <Image Include="WindowsProject10.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
